--- a/笔记.md
+++ b/笔记.md
@@ -44,3 +44,18 @@
 ## 3.激活注册账号
 
 - 点击邮件中的链接，访问服务端的激活服务。跳转到operate-result页面，并自动跳转到相应的页面
+
+# 
+
+# 会话管理
+
+- Http有哪些基本的性质
+  - HTTP是简单，可扩展的
+  - 无状态，有会话。（可以通过cookie解决无状态的问题。）
+- cookie
+  - 是服务器发送给浏览器（在响应头中），并保存在浏览器端的一块数据。
+  - 浏览器下次访问该服务时，会自动携带该数据（在请求头中），将其发送给服务器
+  - cookie的缺点是不安全，所以不要将重要信息存在cookie中。。可以存在redis数据库中
+- Session
+  - 是JavaEE的标准，用于在服务端记录客户端信息。
+  - 数据存放在服务端更加安全，但是也会增加服务端的内存压力，在分布式部署中，session同步也是一个麻烦事。
