--- a/笔记.md
+++ b/笔记.md
@@ -59,3 +59,19 @@
 - Session
   - 是JavaEE的标准，用于在服务端记录客户端信息。
   - 数据存放在服务端更加安全，但是也会增加服务端的内存压力，在分布式部署中，session同步也是一个麻烦事。
+
+
+
+
+
+# 开发登录功能
+
+- 访问登录页面
+  - 点击顶部区域内的链接，打开登录页面
+- 登录
+  - 验证账号，密码，验证码
+  - 成功时，生成登录凭证，发送给客户端
+  - 失败时，跳转回登录页面
+- 退出
+  - 将登录凭证修改为失效状态
+  - 跳转至登录页面。
