显示登录信息

--- a/笔记.md
+++ b/笔记.md
@@ -75,3 +75,21 @@
 - 退出
   - 将登录凭证修改为失效状态
   - 跳转至登录页面。
+
+
+
+# 页面头部显示登录信息
+
+- 拦截器示例
+
+  - 定义拦截器，实现HandlerInterceptor
+  - 配置拦截器，为其指定拦截，排除的路径
+
+- 拦截器应用
+
+  - 在controller请求开始时查询登录用户的信息
+  - 在本次controller请求中持有用户数据
+  - 在模板视图上显示用户数据
+  - 在请求结束时清理用户数据
+
+  ![显示登录信息的流程图.png](https://github.com/ZEQINLIN-666/MyCommunity/blob/master/image/%E6%98%BE%E7%A4%BA%E7%99%BB%E5%BD%95%E4%BF%A1%E6%81%AF%E7%9A%84%E6%B5%81%E7%A8%8B%E5%9B%BE.png?raw=true)
