--- a/笔记.md
+++ b/笔记.md
@@ -93,3 +93,54 @@
   - 在请求结束时清理用户数据
 
   ![显示登录信息的流程图.png](https://github.com/ZEQINLIN-666/MyCommunity/blob/master/image/%E6%98%BE%E7%A4%BA%E7%99%BB%E5%BD%95%E4%BF%A1%E6%81%AF%E7%9A%84%E6%B5%81%E7%A8%8B%E5%9B%BE.png?raw=true)
+
+# 账号设置，可以上传头像
+
+- 上传文件
+  - 请求必须是POST请求
+  - 在html文件的表单标签中，需是`enctype = "multipart/form-data"`
+  - Spring MVC:通过MultipartFile处理上传文件
+- 开发步骤
+  - 访问账号设置的页面
+  - 上传头像
+  - 页面获取头像
+
+
+
+# 检查登录状态（防止安全漏洞）
+
+某些页面只有登录后才能访问得到
+
+我们通过注解和拦截器的方式来对登录状态进行检测
+
+- 使用拦截器
+
+  - 在方法当前标注自定义注解@LoginRequired
+  - 拦截所有请求，只处理带有该注解的方法
+
+- 自定义注解
+
+  - 常用的元注解
+
+    - @Target、@Retention、@Document、@Inherited
+
+  - 如何读取注解
+
+    Method.getDeclaredAnnotations()
+
+    Method.getAnnotation(Class<T> annotiationClass)
+
+    ```java
+    if (handler instanceof HandlerMethod) {
+                HandlerMethod handlerMethod = (HandlerMethod) handler;
+                Method method = handlerMethod.getMethod();
+                //当方法上有LoginRequired注解就执行操作
+                LoginRequired loginRequired = method.getAnnotation(LoginRequired.class);
+                if (loginRequired != null && hostHolder.getUser() == null) {
+                    response.sendRedirect(request.getContextPath() + "/login");
+                    return false;
+                }
+            }
+    ```
+
+    
