第八次提交，实现帖子发布，可访问帖子详情

--- a/笔记.md
+++ b/笔记.md
@@ -144,3 +144,283 @@
     ```
 
     
+
+# 过滤敏感词
+
+## 实现
+
+利用前缀树这种数据结构来实现
+
+![前缀树.PNG](https://github.com/ZEQINLIN-666/MyCommunity/blob/master/image/%E5%89%8D%E7%BC%80%E6%A0%91.PNG?raw=true)
+
+- 特点
+
+  查找效率高，消耗内存大
+
+- 应用：
+
+  字符串检索，词频统计，字符串排序
+
+## 敏感词过滤代码实现
+
+- 定义前缀树
+
+  ```java
+  private class TrieNode {
+  
+          // 关键词结束标识
+          private boolean isKeywordEnd = false;
+  
+          // 子节点(key是下级字符,value是下级节点)
+          private Map<Character, TrieNode> subNodes = new HashMap<>();
+  
+          public boolean isKeywordEnd() {
+              return isKeywordEnd;
+          }
+  
+          public void setKeywordEnd(boolean keywordEnd) {
+              isKeywordEnd = keywordEnd;
+          }
+  
+          // 添加子节点
+          public void addSubNode(Character c, TrieNode node) {
+              subNodes.put(c, node);
+          }
+  
+          // 获取子节点
+          public TrieNode getSubNode(Character c) {
+              return subNodes.get(c);
+          }
+  
+      }
+  ```
+
+  
+
+- 根据敏感词，初始化前缀树
+
+  ```java
+  @PostConstruct
+      public void init() {
+          try (
+                  InputStream is = this.getClass().getClassLoader().getResourceAsStream("sensitive-words.txt");
+                  BufferedReader reader = new BufferedReader(new InputStreamReader(is));
+          ) {
+              String keyword;
+              while ((keyword = reader.readLine()) != null) {
+                  // 添加到前缀树
+                  this.addKeyword(keyword);
+              }
+          } catch (IOException e) {
+              logger.error("加载敏感词文件失败: " + e.getMessage());
+          }
+      }
+  ```
+
+  
+
+- 编写过滤敏感词的方法
+
+```java
+/**
+     * 过滤敏感词
+     *
+     * @param text 待过滤的文本
+     * @return 过滤后的文本
+     */
+    public String filter(String text) {
+        if (StringUtils.isBlank(text)) {
+            return null;
+        }
+
+        // 指针1
+        TrieNode tempNode = rootNode;
+        // 指针2
+        int begin = 0;
+        // 指针3
+        int position = 0;
+        // 结果
+        StringBuilder sb = new StringBuilder();
+
+        while (position < text.length()) {
+            char c = text.charAt(position);
+
+            // 跳过符号
+            if (isSymbol(c)) {
+                // 若指针1处于根节点,将此符号计入结果,让指针2向下走一步
+                if (tempNode == rootNode) {
+                    sb.append(c);
+                    begin++;
+                }
+                // 无论符号在开头或中间,指针3都向下走一步
+                position++;
+                continue;
+            }
+
+            // 检查下级节点
+            tempNode = tempNode.getSubNode(c);
+            if (tempNode == null) {
+                // 以begin开头的字符串不是敏感词
+                sb.append(text.charAt(begin));
+                // 进入下一个位置
+                position = ++begin;
+                // 重新指向根节点
+                tempNode = rootNode;
+            } else if (tempNode.isKeywordEnd()) {
+                // 发现敏感词,将begin~position字符串替换掉
+                sb.append(REPLACEMENT);
+                // 进入下一个位置
+                begin = ++position;
+                // 重新指向根节点
+                tempNode = rootNode;
+            } else {
+                // 检查下一个字符
+                position++;
+            }
+        }
+
+        // 将最后一批字符计入结果
+        sb.append(text.substring(begin));
+
+        return sb.toString();
+    }
+
+    // 判断是否为符号
+    private boolean isSymbol(Character c) {
+        // 0x2E80~0x9FFF 是东亚文字范围
+        return !CharUtils.isAsciiAlphanumeric(c) && (c < 0x2E80 || c > 0x9FFF);
+    }
+// 将一个敏感词添加到前缀树中
+    private void addKeyword(String keyword) {
+        TrieNode tempNode = rootNode;
+        for (int i = 0; i < keyword.length(); i++) {
+            char c = keyword.charAt(i);
+            TrieNode subNode = tempNode.getSubNode(c);
+
+            if (subNode == null) {
+                // 初始化子节点
+                subNode = new TrieNode();
+                tempNode.addSubNode(c, subNode);
+            }
+
+            // 指向子节点,进入下一轮循环
+            tempNode = subNode;
+
+            // 设置结束标识
+            if (i == keyword.length() - 1) {
+                tempNode.setKeywordEnd(true);
+            }
+        }
+    }
+```
+
+# 发布帖子（AJAX）
+
+使用ajax，网页能够将增量更新呈现在页面上，不需要刷新整个页面。（异步方式）
+
+
+
+## 实现发布帖子
+
+首先编写一个转json的静态通用方法（fast-json）
+
+```java
+public static String getJSONString(int code, String msg, Map<String,Object> map){
+        JSONObject json = new JSONObject();
+        json.put("code",code);
+        json.put("msg",msg);
+        if(map != null){
+            for(String key:map.keySet()){
+                json.put("key",map.get(key));
+            }
+        }
+        return json.toJSONString();
+    }
+```
+
+
+
+- 在DiscussPostMapper中新增插入帖子的方法
+
+- 在Service层实现调用mapper，添加帖子
+
+  - 这里需要对输入的标题和正文进行HTML标签的转义并过滤敏感词
+
+    ```java
+     //转义HTML标签
+            post.setTitle(HtmlUtils.htmlEscape(post.getTitle()));
+            post.setContent(HtmlUtils.htmlEscape(post.getContent()));
+    
+            //过滤敏感词
+            post.setTitle(sensitiveFilter.filter(post.getTitle()));
+            post.setContent(sensitiveFilter.filter(post.getContent()));
+    
+    ```
+
+    
+
+- controller层通过传入title和content数据，利用ajax在浏览器和服务器之间进行交互
+
+  - 异步交互，需要编写js方法
+
+    ```javascript
+    function publish() {
+        //点击发布后，输入框自动消失
+    	$("#publishModal").modal("hide");
+    
+    	//获取标题和内容
+    	var title = $("#recipient-name").val();
+    	var content = $("#message-text").val();
+    
+    	//发送异步请求(POST)
+    	$.post(
+    		CONTEXT_PATH + "/discuss/add",
+    		{"title":title,"content":content},
+    		function(data){
+    			data = $.parseJSON(data);
+    			//在提示框中显示返回消息
+    			 $("#hintBody").text(data.msg);
+    			 //显示提示框
+    			 $("#hintModal").modal("show");
+    			 //2秒后自动隐藏提示框
+    			 setTimeout(function(){
+    				 $("#hintModal").modal("hide");
+    				 //如果帖子发布成功，刷新页面
+    				 if(data.code == 0){
+    				 	window.location.reload();
+    				 }
+    			 }, 2000);
+    		 }
+    	);
+    }
+    ```
+
+    
+
+    
+
+## 小问题
+
+首页在未登录的时候，有“我要发布”按钮，需要解决。
+
+解决方式：
+
+```html
+<button type="button" class="btn btn-primary btn-sm position-absolute rt-0" data-toggle="modal" data-target="#publishModal" th:if="${loginUser!=null}">我要发布</button>
+```
+
+添加`th:if="${loginUser!=null}"`
+
+
+
+# 显示帖子详情
+
+1. DiscussPostMapper,添加查询方法，编写select 语句
+2. DiscussPostService 添加查询方法
+3. DiscussPostController编写视图层，将用户信息和帖子信息传入
+4. index.html,在帖子标题上添加访问详情页面的连接
+5. discuss-detail.html
+   - 处理静态资源的访问路径
+   - 复用indexhtml的header区域
+   - 显示标题，作者，发布时间，帖子正文等。
+
