第九次提交，实现显示评论，添加评论（事务管理）

--- a/笔记.md
+++ b/笔记.md
@@ -424,3 +424,298 @@ public static String getJSONString(int code, String msg, Map<String,Object> map)
    - 复用indexhtml的header区域
    - 显示标题，作者，发布时间，帖子正文等。
 
+# 事务管理（为后面实现评论做理论基础）
+
+什么是事务？
+
+事务是由N步数据库操作序列组成的逻辑执行单元，这系列操作要么全执行，要么全不执行。
+
+事务的特性？（ACID）
+
+原子性，一致性，隔离性，持久性。
+
+## 事务的隔离性
+
+常见的并发异常
+
+- 第一类丢失更新（事务回滚导致更新的数据丢失），第二类丢失更新（事务提交导致更新的数据丢失）
+- 脏读，不可重复读（针对单条记录），幻读（针对多条记录，一般是在统计情形下，记录的总数出现误差）
+
+常见的隔离级别
+
+读未提交，读提交，不可重复读，serializable
+
+## 事务的实现机制
+
+- 悲观锁（数据库）
+
+  - 共享锁（S锁）
+
+    事务A对某数据加了共享锁之后，其他事务只能对该数据加共享锁，不可以加排它锁
+
+  - 排他锁（X锁）
+
+    事务A对某数据加了排他锁之后，其他事务不能对该数据加共享锁，也不可以加排它锁
+
+- 乐观锁（自定义）
+
+  - 版本号，时间戳等
+
+    在更新数据前，检查版本号是否发生变化，若变化则取消本次更新，否则就更新数据（版本号+1）
+
+## Spring事务管理
+
+- 声明式事务管理（做到全局事务管理）
+
+  - 通过xml配置，声明某方法的事务特征
+
+  - 通过注解，声明某方法的事务特征
+
+    ```text
+    事务的传播机制
+        REQUIRED:支持当前事务（外部事务），如果不存在则创建新事务
+        REQUIRED_NEW:创建一个新事务，并且暂停当前事务（外部事务）
+        NESTED:如果当前存在事务（外部事务），则嵌套在该事务中执行（独立的提交和回滚）
+    ```
+
+- 编程式事务（做到局部的事务管理）
+
+  - 通过TransactionTemplate 管理事务，并通过它执行数据库的操作
+
+```java
+@Transactional(isolation = Isolation.REPEATABLE_READ,propagation = Propagation.REQUIRED)
+    public Object save1(){
+        User user = new User();
+        user.setUsername("lisi");
+        user.setSalt(CommunityUtil.generateUUID().substring(0,5));
+        user.setPassword(CommunityUtil.md5("123"+user.getSalt()));
+        user.setHeaderUrl("http://image.newcoder.com/head/99t.png");
+        user.setEmail("lisi@163.com");
+        user.setCreateTime(new Date());
+
+        userMapper.insertUser(user);
+
+        int a = 3/0;
+        return a;
+    }
+```
+
+
+
+测试
+
+```java
+@RunWith(SpringRunner.class)
+@SpringBootTest
+@ContextConfiguration(classes =MyCommunityApplication.class)
+public class TransactionTest {
+
+    @Autowired
+    private AlphaService alphaService;
+    @Test
+    public void testSave1(){
+        Object obj = alphaService.save1();
+        System.out.println(obj);
+    }
+}
+```
+
+
+
+结果，程序异常，事务回滚，数据库插入操作失败。
+
+# 显示评论
+
+## 数据访问层：
+
+- 根据实体查询一页评论数据，需要对查询出来的数据进行分页
+
+```java
+ List<Comment> selectCommentByEntity(int entityType,int entityId,int offset,int limit);
+```
+
+- 根据实体查询评论的数量
+
+```java
+int selectCountByEntity(int entityType,int entityId);
+```
+
+## 业务层：
+
+- 处理查询评论的业务
+
+```java
+public List<Comment> findCommentByEntity(int entityType, int entityId, int offset, int limit){
+        return commentMapper.selectCommentByEntity(entityType,entityId,offset,limit);
+    }
+```
+
+- 处理查询评论数量的业务
+
+```java
+ public int findCountByEntity(int entityType,int entityId){
+        return commentMapper.selectCountByEntity(entityType,entityId);
+    }
+```
+
+## 表现层（难点）：
+
+- 显示帖子详细数据时，同时显示该帖子所有的评论数据，包括对帖子评论的回复。
+- 需要理清楚什么是对帖子的回复，什么是对评论的回复。
+- 利用map作为视图对象传递给模板。
+
+```java
+@RequestMapping(path = "/detail/{discussPostId}", method = RequestMethod.GET)
+    public String getDiscussPost(@PathVariable("discussPostId") int discussPostId, Model model, Page page) {
+        //帖子加入模板
+        DiscussPost post = discussPostService.findDiscussPostById(discussPostId);
+        model.addAttribute("post", post);
+        //用户信息加入模板
+        User user = userService.findUserById(post.getUserId());
+        model.addAttribute("user", user);
+
+        page.setLimit(5);
+        page.setPath("/discuss/detail/" + discussPostId);
+        page.setRows(post.getCommentCount());
+
+        /*
+        * 评论（comment）：给帖子的评论
+        * 回复（reply）：给评论的评论
+        *
+        * */
+        //评论列表
+        List<Comment> commentList = commentService.findCommentByEntity(
+                ENTITY_TYPE_POST, post.getId(), page.getOffset(), page.getLimit());
+        //评论显示对象列表
+        List<Map<String,Object>> commentViewObjectList = new ArrayList<>();
+
+        if(commentList != null){
+            for(Comment comment:commentList){
+                //每个评论的显示对象
+                Map<String,Object> commentViewObject = new HashMap<>();
+                //往显示对象中添加评论的内容
+                commentViewObject.put("comment",comment);
+                //往显示对象中添加评论的作者
+                commentViewObject.put("user",userService.findUserById(comment.getUserId()));
+
+                //每次评论都会有回复，下面要遍历插入回复，回复不进行分页
+                //回复列表
+                List<Comment> replyList = commentService.findCommentByEntity(
+                        ENTITY_TYPE_COMMENT, comment.getId(), 0, Integer.MAX_VALUE);
+
+                //回复的显示对象列表
+                List<Map<String,Object>> replyViewObjectList = new ArrayList<>();
+
+                if(replyList != null){
+                    for(Comment reply:replyList){
+                        Map<String,Object> replyViewObject = new HashMap<>();
+                        //回复
+                        replyViewObject.put("reply",reply);
+                        //回复的作者
+                        replyViewObject.put("user",userService.findUserById(reply.getUserId()));
+                        //回复的目标
+                        User target = reply.getTargetId() == 0 ? null : userService.findUserById(reply.getTargetId());
+                        replyViewObject.put("target",target);
+                        replyViewObjectList.add(replyViewObject);
+
+                    }
+                }
+                commentViewObject.put("replys",replyViewObjectList);
+
+                //回复数量
+                int replyCount = commentService.findCountByEntity(ENTITY_TYPE_COMMENT,comment.getId());
+                commentViewObject.put("replyCount",replyCount);
+
+
+                commentViewObjectList.add(commentViewObject);
+            }
+        }
+        model.addAttribute("comments",commentViewObjectList);
+        return "/site/discuss-detail";
+
+    }
+```
+
+## 修改页面模板
+
+1.处理好循环。
+
+```html
+th:each="cvo:${comments}
+```
+
+2.回复的楼层数根据循环的次数进行递增
+
+```html
+<i th:text="${page.offset +cvoStat.count}"> 1</i>#
+```
+
+3.根据回复的对象不同做好条件判断
+
+```html
+<div>
+		<span th:if="${rvo.target == null}">
+			<b class="text-info" th:utext="${rvo.user.username}">寒江雪</b>:&nbsp;&nbsp;
+		</span>
+		<span th:if="${rvo.target != null}">
+				<i class="text-info" th:utext="${rvo.user.username}">寒江雪</i>回复
+				<b class="text-info" th:utext="${rvo.target.username}">寒江雪</b>:&nbsp;&nbsp;
+		</span>
+		<span th:utext="${rvo.reply.content}">
+            这个是直播时间哈，觉得晚的话可以直接看之前的完整录播的~
+    	</span>
+</div>
+```
+
+# 添加评论
+
+## 数据层：
+
+- 添加评论数据CommentMapper
+
+```java
+int insertComment(Comment comment);
+```
+
+- 修改帖子的评论数量 DiscussPostMapper
+
+```java
+int updateCommentCount(int discussPostId,int commentCount);
+```
+
+## 业务层：
+
+- 处理添加评论的业务：
+  - 敏感词过滤，增加评论，然后更新帖子的评论数量
+
+## 表现层：
+
+- 处理添加评论数据的请求
+- 设置添加评论的表单。
+
+## 修改页面模板（难点）
+
+对于评论数据，我们需要隐式地向页面传递参数，利用input hidden
+
+```html
+<form method="post" th:action="@{|/comment/add/${post.id}|}">
+   <div>
+      <input type="text" class="input-size" name="content" th:placeholder="|回复${rvo.user.username}|"/>
+      <input type="hidden" name="entityType" value="2">
+      <input type="hidden" name="entityId" th:value="${cvo.comment.id}">
+      <input type="hidden" name="targetId" th:value="${rvo.user.id}">
+   </div>
+   <div class="text-right mt-2">
+      <button type="submit" class="btn btn-primary btn-sm" onclick="#">&nbsp;&nbsp;回&nbsp;&nbsp;复&nbsp;&nbsp;</button>
+   </div>
+</form>
+```
+
+
+
+数据提交地址
+
+```html
+<form method="post" th:action="@{|/comment/add/${post.id}|}">
+```
+
