第11次提交，实现发送私信，统一异常处理和统一日志处理

--- a/笔记.md
+++ b/笔记.md
@@ -719,3 +719,144 @@ int updateCommentCount(int discussPostId,int commentCount);
 <form method="post" th:action="@{|/comment/add/${post.id}|}">
 ```
 
+
+
+
+
+# 统一异常处理
+
+- @ControllerAdvice
+  - 用于修饰类，表示该类是Controller的全局配置类
+  - 在此类中，可以对Controller进行如下三种全局配置：
+    - 异常处理方案，绑定数据方案，绑定参数方案
+- @ExceptionHandler
+  - 用于修饰方法，该方法会在Controller出现异常后被调用，用于处理捕获到的异常
+- @ModelAttribute
+  - 用于修饰方法，该方法会在Controller方法执行前被调用，用于为Model对象绑定参数
+- @DataBinder
+  - 用于修饰方法，该方法会在Controller方法执行前被调用，用于绑定参数的转换器。
+
+```java
+package com.zeqinlin.MyCommunity.controller.advice;
+
+import com.zeqinlin.MyCommunity.util.CommunityUtil;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.stereotype.Controller;
+import org.springframework.web.bind.annotation.ControllerAdvice;
+import org.springframework.web.bind.annotation.ExceptionHandler;
+
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
+import java.io.IOException;
+import java.io.PrintWriter;
+
+
+/**
+ * Description:
+ * date: 2021/6/1 20:59
+ *
+ * @author dell Linzeqin
+ * @since JDK 1.8
+ */
+@ControllerAdvice(annotations = Controller.class)
+public class ExceptionAdvice {
+    private  static  final Logger logger = LoggerFactory.getLogger(ExceptionAdvice.class);
+
+    @ExceptionHandler({Exception.class})
+    public void handleException(Exception e, HttpServletRequest request, HttpServletResponse response) throws IOException {
+        logger.error("服务器发生异常:" + e.getMessage());
+        for(StackTraceElement element:e.getStackTrace()){
+            logger.error(element.toString());
+        }
+
+        String xRequestedWith = request.getHeader("x-requested-with");
+        if("XMLHttpRequest".equals(xRequestedWith)){
+            response.setContentType("application/plain;charset=utf-8");
+            PrintWriter writer = response.getWriter();
+            writer.write(CommunityUtil.getJSONString(1,"服务器异常"));
+        }else{
+            response.sendRedirect(request.getContextPath() + "/error");
+        }
+    }
+}
+
+```
+
+
+
+
+
+# 统一记录日志
+
+记录日志属于系统需求，不宜将其与业务需求过于耦合。所以在这里引入AOP的面向切面编程，他是OOP的补充，可以进一步提高编程的效率。
+
+
+
+Spring AOP实现
+
+- JDK动态代理
+
+  Java提供的动态代理技术，可以在运行时创建接口的代理实例
+
+  Spring AOP默认采用此种技术，在接口的代理实例中织入编码
+
+- CGLib动态代理
+
+  采用底层的字节码技术，在运行时创建子类代理实例
+
+  当目标对象不存在接口时，Spring AOP会采用此种方式，在子类实例中织入代码。
+
+
+
+```java
+package com.zeqinlin.MyCommunity.aspect;
+
+import org.aspectj.lang.JoinPoint;
+import org.aspectj.lang.annotation.Aspect;
+import org.aspectj.lang.annotation.Before;
+import org.aspectj.lang.annotation.Pointcut;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.stereotype.Component;
+import org.springframework.web.context.request.RequestAttributes;
+import org.springframework.web.context.request.RequestContextHolder;
+import org.springframework.web.context.request.ServletRequestAttributes;
+
+import javax.servlet.http.HttpServletRequest;
+import java.text.SimpleDateFormat;
+import java.util.Date;
+
+/**
+ * Description:统一日志处理的组件
+ * date: 2021/6/1 21:40
+ *
+ * @author dell Linzeqin
+ * @since JDK 1.8
+ */
+@Component
+@Aspect
+public class ServiceLogAspect {
+
+    private static final Logger logger = LoggerFactory.getLogger(ServiceLogAspect.class);
+	
+    //第一个星代表任意返回值
+    //service.*.*(..)) .*.*代表service下的所有的类的所有的方法，（..）表示所有的参数。
+    @Pointcut("execution(* com.zeqinlin.MyCommunity.service.*.*(..))")
+    public void pointcut() {
+    }
+
+    @Before("pointcut()")
+    public void before(JoinPoint joinPoint) {
+        ServletRequestAttributes attributes = (ServletRequestAttributes) RequestContextHolder.getRequestAttributes();
+        HttpServletRequest request = attributes.getRequest();
+        String ip = request.getRemoteHost();
+        String now = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss").format(new Date());
+        String target = joinPoint.getSignature().getDeclaringTypeName() + "." + joinPoint.getSignature().getName();
+        logger.info(String.format("用户[%s],在[%s]，访问了[%s]的服务",ip,now,target));
+    }
+}
+```
+
+
+
